@@ -1,13 +1,23 @@
 #!/bin/bash
 
 #
-# build statistical summary: mean, median, avg, deviation, standard deviation
+# file   summaryStatsET.sh
+# author Tri Kurniawan Wijaya
+# date   Tue 26 Apr 2011 12:05:05 PM CEST 
+#
+# brief: build statistical summary: mean, median, avg, deviation, standard deviation
 #
 # require 1 param
-# 1st param: directory result, example: SummaryCore/SummaryCore-line
+# 1st param: main summary directory to be processed. 
+#            For example: SummaryCore/SummaryCore-line
 #
 
 mainDir=$1
+statsScript="stats.awk"
+leadingAvg="*avg: "
+trailingAvg="  med:*"
+leadingStdDev="*sdvn: "
+trailingStdDev="]"
 rm -rf $mainDir/summaryLatex.txt
 rm -rf $mainDir/summaryTotal.txt
 rm -rf $mainDir/summaryStatsASDLV.txt
@@ -32,65 +42,65 @@ for dir in $mainDir/*; do
     echo $res >> $mainDir/summaryTotal.txt
     latex=$res
 	  
-    res2=`cat $dir/summaryMI.txt | awk -f vstats.awk`
+    res2=`cat $dir/summaryMI.txt | awk -f $statsScript`
     echo "MI = [$res2]" >> $mainDir/summaryTotal.txt
     echo "$res = [$res2]" >> $mainDir/summaryStatsMI.txt
     #for latex
-    avg=${res2#*avg:  }
-    avg=${avg%  med:*}
-    std=${res2#*sdvn:  }
-    std=${std%]}
+    avg=${res2#$leadingAvg}
+    avg=${avg%$trailingAvg}
+    std=${res2#$leadingStdDev}
+    std=${std%$trailingStdDev}
     latex="$latex&$avg&$std"
 
-    res2=`cat $dir/summarySizeM.txt | awk -f vstats.awk`
+    res2=`cat $dir/summarySizeM.txt | awk -f $statsScript`
     echo "SizeM = [$res2]" >> $mainDir/summaryTotal.txt
     echo "$res = [$res2]" >> $mainDir/summaryStatsSizeM.txt
     #for latex
-    avg=${res2#*avg:  }
-    avg=${avg%  med:*}
-    std=${res2#*sdvn:  }
-    std=${std%]}
+    avg=${res2#$leadingAvg}
+    avg=${avg%$trailingAvg}
+    std=${res2#$leadingStdDev}
+    std=${std%$trailingStdDev}
     latex="$latex&$avg&$std"
 
-    res2=`cat $dir/summaryCallDLV.txt | awk -f vstats.awk`
+    res2=`cat $dir/summaryCallDLV.txt | awk -f $statsScript`
     echo "CallDLV = [$res2]" >> $mainDir/summaryTotal.txt
     echo "$res = [$res2]" >> $mainDir/summaryStatsCallDLV.txt
     #for latex
-    avg=${res2#*avg:  }
-    avg=${avg%  med:*}
-    std=${res2#*sdvn:  }
-    std=${std%]}
+    avg=${res2#$leadingAvg}
+    avg=${avg%$trailingAvg}
+    std=${res2#$leadingStdDev}
+    std=${std%$trailingStdDev}
     latex="$latex&$avg&$std"
 
-    res2=`cat $dir/summaryASDLV.txt | awk -f vstats.awk`
+    res2=`cat $dir/summaryASDLV.txt | awk -f $statsScript`
     echo "ASDLV = [$res2]" >> $mainDir/summaryTotal.txt
     echo "$res = [$res2]" >> $mainDir/summaryStatsASDLV.txt
     #for latex
-    avg=${res2#*avg:  }
-    avg=${avg%  med:*}
-    std=${res2#*sdvn:  }
-    std=${std%]}
+    avg=${res2#$leadingAvg}
+    avg=${avg%$trailingAvg}
+    std=${res2#$leadingStdDev}
+    std=${std%$trailingStdDev}
     latex="$latex&$avg&$std"
 
-    res2=`cat $dir/summaryCtrAS.txt | awk -f vstats.awk`
+    res2=`cat $dir/summaryCtrAS.txt | awk -f $statsScript`
     echo "CtrAS = [$res2]" >> $mainDir/summaryTotal.txt
     echo "$res = [$res2]" >> $mainDir/summaryStatsCtrAS.txt
     #for latex
-    avg=${res2#*avg:  }
-    avg=${avg%  med:*}
-    std=${res2#*sdvn:  }
-    std=${std%]}
+    avg=${res2#$leadingAvg}
+    avg=${avg%$trailingAvg}
+    std=${res2#$leadingStdDev}
+    std=${std%$trailingStdDev}
     latex="$latex&$avg&$std"
 
-    res2=`cat $dir/summaryTime.txt | awk -f vstats.awk`
+    res2=`cat $dir/summaryTime.txt | awk -f $statsScript`
     echo "Time = [$res2]" >> $mainDir/summaryTotal.txt
     echo "$res = [$res2]" >> $mainDir/summaryStatsTime.txt
     #for latex
-    avg=${res2#*avg:  }
-    avg=${avg%  med:*}
-    std=${res2#*sdvn:  }
-    std=${std%]}
-    latex="$latex&$avg&$std"
+    avg=${res2#$leadingAvg}
+    avg=${avg%$trailingAvg}
+    std=${res2#$leadingStdDev}
+    std=${std%$trailingStdDev}
+    latex="$latex&$avg&$std\\\\"
     echo $latex >> $mainDir/summaryLatex.txt
   fi
 done
